--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <h2 class="font-poppins text-gray-100 text-lg">
                 Projeto MentalAid
               </h2>
-              <img src="src/assets/logo300.png" alt="" class="py-3 w-[90%]" />
+              <img src="src/assets/logo300.png" alt="" class="py-3 w-[75%]" />
             </div>
             <button
               class="slide__button absolute bottom-[10%] flex flex-row justify-center items-center bg-yellowFiap p-4 gap-3 rounded-lg shadow-lg"
@@ -66,7 +66,7 @@
           </header>
         </div>
         <div
-          class="swiper-slide flex flex-col justify-center items-center text-red-500"
+          class="swiper-slide overflow-y-scroll flex flex-col justify-center items-center text-red-500"
         >
           <header class="swiper__header" style="padding-top: 3.5rem">
             <div class="flex flex-col justify-center items-center gap-6">
@@ -104,21 +104,10 @@
                 clínico da criança com TEA.
               </li>
             </div>
-            <button
-              class="slide__button flex flex-row justify-center items-center bg-yellowFiap p-4 gap-3 rounded-lg shadow-lg"
-            >
-              <i
-                class="font-oxanium text-pinkFiap font-bold underline underline-offset-4 drop-shadow-md text-lg decoration-2"
-                >Security</i
-              >
-              <i
-                class="fa-solid fa-person-military-pointing text-pinkFiap text-2xl"
-              ></i>
-            </button>
           </header>
         </div>
         <div
-          class="swiper-slide flex flex-col justify-center items-center text-red-500"
+          class="swiper-slide overflow-y-scroll flex flex-col justify-center items-center text-red-500"
         >
           <header class="swiper__header" style="padding-top: 3rem">
             <h3 class="font-oxanium text-pinkFiap text-3xl text-center">
@@ -204,15 +193,6 @@
                 (express-mongoose-sanitize)
               </li>
             </ul>
-            <button
-              class="slide__button flex flex-row justify-center items-center bg-yellowFiap p-4 gap-3 rounded-lg shadow-lg"
-            >
-              <i
-                class="font-oxanium text-pinkFiap font-bold underline underline-offset-4 drop-shadow-md text-lg decoration-2"
-                >Social</i
-              >
-              <i class="fa-solid fa-hashtag text-pinkFiap text-2xl"></i>
-            </button>
           </header>
         </div>
         <div
@@ -247,7 +227,7 @@
               class="tab__container flex flex-col justify-center items-center"
             >
               <div
-                class="tab__content tab__content-stack flex flex-col justify-center items-center flex-wrap font-poppins text-gray-100 text-2xl gap-3"
+                class="tab__content tab__content-stack flex flex-col justify-center items-center flex-wrap font-poppins text-gray-100 text-xl gap-3"
               >
                 <li>JavaScript</li>
                 <li>TailwindCSS</li>
